added support for not-so-html5 capable browsers

--- a/convolution.css
+++ b/convolution.css
@@ -8,6 +8,10 @@ h1 {
   cursor: pointer;
 }
 
+section, header {
+  display: block;
+}
+
 a#restore, a#minimize {
   text-decoration: none;
   color: dimgray;
